# shtab

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  LICENCE  MANIFEST.in  Makefile  README.rst  index.html  mkdocs.yml  mypy.ini  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  sitemap.xml
.github/workflows/: codespell.yml  comment-bot.yml  test.yml
contributing/: index.html
docs/: index.md  mkdocs.yml  pydoc-markdown.yml  pydoc_markdown_shtab.py  requirements.txt  usage.md  use.md
examples/: customcomplete.py  docopt-greeter.py  doublecomplete.py  pathcomplete.py
licence/: index.html
ref/: index.html
search/: search_index.json
shtab/: __init__.py  __main__.py  bash.sh  main.py  setuptools.py  shtab.py  tcsh.sh  zsh.sh
tests/: __init__.py  __main__.py  test_shtab.py  utils.py
use/: index.html
