[metadata]
name=shtab
description=Automagic shell tab completion for Python CLI applications
long_description=file: README.rst
long_description_content_type=text/x-rst
license=Apache-2.0
license_file=LICENCE
url=https://github.com/iterative/shtab
project_urls=
    Changelog=https://github.com/iterative/shtab/releases
    Documentation=https://docs.iterative.ai/shtab
author=Casper da Costa-Luis
author_email=casper.dcl@physics.org
maintainer=Iterative
maintainer_email=support@iterative.ai
keywords=tab, complete, completion, shell, bash, zsh, argparse
platforms=any
provides=shtab
classifiers=
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: MacOS X
    Environment :: Other Environment
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: End Users/Desktop
    Intended Audience :: Other Audience
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Operating System :: POSIX :: BSD
    Operating System :: POSIX :: BSD :: FreeBSD
    Operating System :: POSIX :: Linux
    Operating System :: POSIX :: SunOS/Solaris
    Operating System :: Unix
    Programming Language :: Other Scripting Engines
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation
    Programming Language :: Python :: Implementation :: IronPython
    Programming Language :: Python :: Implementation :: PyPy
    Programming Language :: Unix Shell
    Topic :: Desktop Environment
    Topic :: Education :: Computer Aided Instruction (CAI)
    Topic :: Education :: Testing
    Topic :: Office/Business
    Topic :: Other/Nonlisted Topic
    Topic :: Software Development
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Pre-processors
    Topic :: Software Development :: User Interfaces
    Topic :: System
    Topic :: System :: Installation/Setup
    Topic :: System :: Shells
    Topic :: System :: System Shells
    Topic :: Terminals
    Topic :: Utilities
[options]
setup_requires=setuptools>=42; setuptools_scm[toml]>=3.4
install_requires=
    argparse; python_version < "2.7" or ("3.0" <= python_version and python_version < "3.2")
python_requires= >=2.7, !=3.0.*, !=3.1.*
packages=find:
[options.entry_points]
console_scripts=
    shtab=shtab.main:main
[options.packages.find]
exclude=tests
[bdist_wheel]
universal=1

[flake8]
max_line_length=88
extend-ignore=E203,P1
exclude=build,dist,.eggs,.git,__pycache__

[isort]
profile=black
known_first_party=shtab,tests

[tool:pytest]
timeout=5
log_level=DEBUG
python_files=test_*.py
testpaths=tests
addopts=-v --tb=short -rxs -W=error --durations=0 --cov=shtab --cov-report=term-missing --cov-report=xml
